# boinc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  vcpkg.json
SCAFFOLD/: NOTES.md
api/: CMakeLists.txt
client/: CMakeLists.txt  acct_mgr.cpp  acct_mgr.h  acct_setup.cpp  app.cpp  app.h  app_config.cpp  app_control.cpp  app_graphics.cpp  app_start.cpp  app_test.cpp  async_file.cpp  auto_update.cpp  check_security.cpp  check_state.cpp  client_state.cpp  client_state.h  client_types.cpp  client_types.h  cpu_sched.cpp  cs_account.cpp  cs_apps.cpp  cs_files.cpp  cs_notice.cpp  cs_prefs.cpp  cs_scheduler.cpp  cs_sporadic.cpp  cs_statefile.cpp  cs_trickle.cpp  file_xfer.cpp  gui_rpc_server_ops.cpp  log_flags.cpp  net_stats.cpp  project.cpp  project.h  result.cpp  result.h  rr_sim.cpp  scheduler_op.h  sim.cpp  (+1 more)
doc/history/: checkin_notes_2003  checkin_notes_2004  checkin_notes_2005  checkin_notes_2006  checkin_notes_2009  checkin_notes_2010  checkin_notes_2011
doc/planning/: MODERNIZATION_STRATEGY.md  ROADMAP.md
doc/planning/SCAFFOLD/: NOTES.md
lib/: CMakeLists.txt  boinc_win.h  filesys.cpp  filesys.h  sched_msgs.cpp  str_replace.h  url.cpp  url.h
tests/: executeUnitTests.ps1
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/lib/: CMakeLists.txt
zip/: CMakeLists.txt
